# tgfr

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Readme.md
include/tgfr/: Bot.hpp  BotThreading.hpp  Logger.h  tgfr.hpp  utils-bot.hpp  utils.hpp
include/tgfr/handler/: Event.hpp  EventExecutable.h  EventHandler.hpp  EventObject.hpp
include/tgfr/manager/: EventManager.hpp  EventQueue.hpp  EventWorker.hpp
samples/echo_bot/: CMakeLists.txt
samples/echo_bot/src/: EventAnyMessage.hpp  EventStart.hpp  main.cpp
samples/event_error_bot/: CMakeLists.txt
samples/event_error_bot/src/: EventAnyMessage.hpp  EventError.hpp  EventStart.hpp  main.cpp
samples/event_params_bot/: CMakeLists.txt
samples/event_params_bot/src/: Counter.hpp  EventAnyMessage.hpp  main.cpp
samples/inline_keyboard_bot/: CMakeLists.txt
samples/inline_keyboard_bot/src/: EventAnyMessage.hpp  EventButton.hpp  main.cpp
src/: Bot.cpp  BotAsync.cpp  BotSync.cpp
src/handler/: EventHandler.cpp
src/logger/: Logger.cpp
src/manager/: EventWorker.cpp
utilities/: install-deps.sh
